--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -12,7 +12,16 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
+        <!-- Style -->
         <link href="../css/style.css" rel="stylesheet" />
+
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet" />
+
+        <!-- Color Picker js -->
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -119,11 +128,12 @@
                     </div>
                 </nav>
             </header>
+
             <!-- Project Navigation -->
-            <div class="container-fluid">
+            <div id="project-navigation" class="container-fluid">
                 <div class="d-flex justify-content-between">
                     <div>
-                        <a class="fs-4 text-decoration-none me-md-auto" href="stepstoneisland.html">
+                        <a class="text-decoration-none me-md-auto" href="stepstoneisland.html">
                             <span class="icon-link">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
                                 <use href="#arrow-left-circle"></use>
@@ -133,7 +143,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="fs-4 text-decoration-none me-md-auto" href="duos.html">
+                        <a class="text-decoration-none me-md-auto" href="duos.html">
                             <span class="icon-link">
                             DuOS
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
@@ -147,19 +157,19 @@
         </div>
 
       <!-- Body -->
-        <div class="container my-5">
+        <div class="container my-4">
             <main>
                 <div class="row">
                     <div class="col-2 d-none d-lg-block">
                         <div class="sticky-top border-end">
-                            <div class="fw-bold py-3">Page Contents</div>
+                            <h4 class="fw-bold py-3">Page Contents</h4>
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
-                                <nav class="nav nav-pills flex-column">
+                                <nav class="nav flex-column">
                                     <a class="nav-link" href="#overview">Disco Bear</a>
                                     <a class="nav-link" href="#about">About</a>
                                     <a class="nav-link" href="#ideation">Ideation</a>
                                     <a class="nav-link" href="#design-and-development">Design & Development</a>
-                                    <nav class="nav nav-pills flex-column">
+                                    <nav class="nav flex-column">
                                         <a class="nav-link ms-3" href="#dd-designing-the-narrative">Designing The Narrative</a>
                                         <a class="nav-link ms-3" href="#dd-music-and-sound">Music & Sound</a>
                                         <a class="nav-link ms-3" href="#dd-playtesting">Playtesting</a>
@@ -172,15 +182,15 @@
 
                     <div class="col col-lg-10 col-sm-12" data-bs-spy="scroll" data-bs-target="#navbar-tableofcontents" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                         <div id="overview" class="container mb-3 pb-3">
-                            <div class="row mt-2">
+                            <div class="d-flex align-items-center">
                                 <div class="col">
-                                    <div class="display-4 mb-3">Disco Bear</div>
+                                    <h1 class="mb-3 flex-grow-1">Disco Bear</h1>
                                 </div>
-                                <div class="col mx-2 img-box">
+                                <div class="col flex-shrink-0 img-box">
                                     <a href="../images/badges/indiecade-seal2017.png" data-toggle="lightbox">
                                         <img src="../images/badges/indiecade-seal2017.png" width="100px" class="float-end" alt="../images/badges/indiecade-seal2017.png"/>
                                     </a>
-                                 </div>
+                                </div>
                             </div>
                             <div class="row py-3">
                                 <div class="col-md-6">
