--- a/projects/pipelinegame.html
+++ b/projects/pipelinegame.html
@@ -12,7 +12,16 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
         crossorigin="anonymous"
         />
+        <!-- Style -->
         <link href="../css/style.css" rel="stylesheet" />
+
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet" />
+
+        <!-- Color Picker js -->
         <script src="../js/colorpicker.js"></script>
     </head>
 
@@ -119,11 +128,12 @@
                     </div>
                 </nav>
             </header>
+
             <!-- Project Navigation -->
-            <div class="container-fluid">
+            <div id="project-navigation" class="container-fluid">
                 <div class="d-flex justify-content-start">
                     <div>
-                        <a class="fs-4 text-decoration-none me-md-auto" href="duos.html">
+                        <a class="text-decoration-none me-md-auto" href="duos.html">
                             <span class="icon-link">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
                                 <use href="#arrow-left-circle"></use>
@@ -137,14 +147,14 @@
         </div>
 
         <!-- Body -->
-        <div class="container my-5">
+        <div class="container my-4">
             <main>
                 <div class="row">
                     <div class="col-2 d-none d-lg-block">
                         <div class="sticky-top border-end">
-                            <div class="fw-bold py-3">Page Contents</div>
+                            <h4 class="fw-bold py-3">Page Contents</h4>
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
-                                <nav class="nav nav-pills flex-column">
+                                <nav class="nav flex-column">
                                     <a class="nav-link" href="#overview">The Pipeline Game</a>
                                 </nav>
                             </nav>
@@ -155,7 +165,7 @@
                         <div id="overview" class="container mb-3 pb-3">
                             <div class="row mt-2">
                                 <div class="col">
-                                    <div class="display-4 mb-3">The Pipeline Game</div>
+                                    <h1 class="mb-3 flex-grow-1">The Pipeline Game</h1>
                                 </div>
                             </div>
                             <div class="row py-3">
