--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="container">
                 <div class="row row-cols-1 pb-3 section-header">
                     <h1>Professional Projects</h1>
-                    <p>Released projects that I have contributed to at various studios.</p>
+                    <p class="lead">Released projects that I have contributed to at various studios.</p>
                 </div>
                 <div class="row row-cols-1 pt-3 pb-4">
                     <div class="col col-lg-5">
@@ -298,7 +298,7 @@
             <div class="container my-5">
                 <div class="row row-cols-1 pb-3 section-header">
                     <h1 class="section-header">Personal Projects</h1>
-                    <p>A curated list of old student projects, game jam games, etc.</p>
+                    <p class="lead">A curated list of old student projects, game jam games, etc.</p>
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
                     <div class="col">
