Updated nav-pills to nav-underline

--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -73,7 +73,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div id="navbarToggle" class="collapse navbar-collapse justify-content-sm-end py-3">
-                            <ul class="nav nav-pills flex-column flex-lg-row">
+                            <ul class="nav nav-underline flex-column flex-lg-row">
                                 <li class="nav-item px-2">
                                     <a class="nav-link active" aria-current="page" href="../index.html">Projects</a>
                                 </li>
