Updates to index.html
* Text updates
* Spacing
* Added target="_blank" to links

--- a/index.html
+++ b/index.html
@@ -162,12 +162,10 @@
                     <div class="col col-lg-7 py-lg-0 py-3 section-header">
                         <h2> Marvel Snap </h2>
                         <p class="lead">
-                            Marvel Snap is an award winning, digital collectable card game developed by <a href="https://seconddinner.com/" class="text-decoration-none"><span class="fw-bold">Second Dinner</span></a>. 
-                            The core gameplay of Snap involves creating a deck of twelve unique Marvel characters and battling against another player to win
-                            two out of the three locations on the board.
-                        </p>
+                            Marvel Snap is an award winning, digital collectable card game developed by <a href="https://seconddinner.com/" class="text-decoration-none" target="_blank"><span class="fw-bold">Second Dinner</span></a> in which 
+                            players build a deck of twelve Marvel characters and battle against one another to increase (or decrease) their seasonal rank.
                         <p>
-                            More information on the game can be found at <a href="https://marvelsnap.com/" class="text-decoration-none">https://marvelsnap.com/</a>.
+                            More information on the game can be found at <a href="https://marvelsnap.com/" class="text-decoration-none" target="_blank">https://marvelsnap.com/</a>.
                         </p>
                     </div>
                 </div>
@@ -204,10 +202,10 @@
                     <div class="col col-lg-7 py-lg-0 py-3 section-header">
                         <h2> Fictif </h2>
                         <p class="lead">
-                            Fictif is a collection of otomie inspired interactive visual novels. Similar to The Arcana, players play as the main character and choose which character they like to romance throughout each story.
+                            Fictif is a collection of otomie inspired interactive visual novels in which players play as the main character and choose which character they like to romance throughout each story.
                         </p>
                         <p>
-                            Fictif was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                            Fictif was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none" target="_blank">Dorian.live</a>.
                         </p>
                     </div>
                 </div>
@@ -250,7 +248,7 @@
                             for the townfolk in various locations.
                         </p>
                         <p>
-                            Potions Please! had a limited release and unfortunetly was shelved prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                            Potions Please! had a limited release and unfortunetly was shelved prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none" target="_blank">Dorian.live</a>.
                         </p>
                     </div>
                 </div>
@@ -291,7 +289,7 @@
                             Taking inspiration from tarot and otome style love stories, The Arcana is a mobile interactive visual novel where players play as the main character and choose one of six characters to romance throughout the main story.
                         </p>
                         <p>
-                            The Arcana was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none">Dorian.live</a>.
+                            The Arcana was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none" target="_blank">Dorian.live</a>.
                         </p>
                     </div>
                 </div>
@@ -346,8 +344,8 @@
       <!-- Footer -->
     <div class="container">
       <footer class="text-muted bg-greyLightBlue">
-            <div class="d-flex justify-content-center">
-          <p class="smallText">Katie Pustolski 2025</p>
+        <div class="d-flex justify-content-center">
+            <p class="smallText">Katie Pustolski 2025</p>
           <div>
       </footer>
     </div>
