Updates to various project pages
* Added target="_blank" to links
* Spacing corrections

--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -175,11 +175,11 @@
                                         Visit vignettes of writer Lindolpho Espeschit's life by piecing together a collage of images, letters, and sounds in this short interactive experience.
                                     </p>
                                     <p>
-                                        Lindolpho's Box of Ephemera was created for <a href="https://itch.io/jam/hidden-heroes-jam" class="text-decoration-none">IndieCade's Hidden Hero's Game Jam</a> back in <span class="fw-bold">February 2023</span>. I teamed up with my former USC classmate
+                                        Lindolpho's Box of Ephemera was created for <a href="https://itch.io/jam/hidden-heroes-jam" class="text-decoration-none" target="_blank">IndieCade's Hidden Hero's Game Jam</a> back in <span class="fw-bold">February 2023</span>. I teamed up with my former University of Southern California classmate
                                         <span class="fw-bold">Gabriela Purri Gomes</span> and her sister <span class="fw-bold">Giulia Purri Gomes</span> to create an interactive experience based on their great-grandfather, Lindolpho Espeschit.
                                     </p>
                                     <p>
-                                        This project is available to play for free on <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none">itch.io.</a>
+                                        This project is available to play for free on <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none" target="_blank">itch.io.</a>
                                     </p>
                                 </div>
                                 <div class="col img-box">
@@ -226,7 +226,7 @@
                                         We all collaborated in designing this experience. As the point engineer on the team, I handled most of building the project in the <span class="fw-bold">Unity Game Engine</span> while my teammates gathered information on Lindolpho, created the assets, and handled the Portuguese translation used in the project. The most challenging part of this project was that we were spreadout across different countries and time zones. At the time Gabi was in Germany 🇩🇪, Giulia was in Portugal 🇵🇹, and I was in the United States 🇺🇸.
                                     </p>
                                     <p>
-                                        More information can be found on the <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none">itch.io</a> page.
+                                        More information can be found on the <a href="https://kpustolski.itch.io/lindolphos-box-of-ephemera" class="text-decoration-none" target="_blank">itch.io</a> page.
                                     </p>
                                 </div>
                                 <div class="col img-box">
