--- a/projects/pipelinegame.html
+++ b/projects/pipelinegame.html
@@ -179,8 +179,10 @@
                                         Animation Pipeline</span> by DreamWorks Education that tests DreamWorks
                                         employee's understanding of the DreamWorks Animation SKG pipeline.
                                         It was created with <span class="fw-bold">HTML5 canvas</span> , <span class="fw-bold">JavaScript</span> and <span class="fw-bold">CSS</span>. In addition, I used
-                                        <span class="fw-bold">Adobe Photoshop</span> to create some of the game's assets as well. Overall, the project
-                                        took about three weeks to complete. It was included as part of new employee
+                                        <span class="fw-bold">Adobe Photoshop</span> to create some of the game's assets as well.
+                                    </p>
+                                    <p>
+                                        Overall, the project took about three weeks to complete. It was included as part of new employee
                                         orientation for about a year or so after its completion.
                                     </p>
                                 </div>
