--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -323,11 +323,11 @@
                                     <p>
                                         Team Stepstone Island:
                                         <ul class="list-unstyled">
-                                            <li><a class="text-decoration-none" href="https://www.stevensugar.art/">Steven Sugar</a>- Artist / Game Designer</li>
-                                            <li><a class="text-decoration-none" href="https://www.linkedin.com/in/michelleeolson/">Michelle Olson</a> - Game Designer</li>
-                                            <li><a class="text-decoration-none" href="https://www.linkedin.com/in/sam-celeste-80265174/">Sam Celeste</a> - Game Designer</li>
-                                            <li><a class="text-decoration-none" href="https://www.linkedin.com/in/blair-devereaux-41bb81148/">Blair Devereaux</a> - Sound Designer</li>
-                                            <li><a class="text-decoration-none" href="https://trevinomedia.com/">Sarah Trevino</a> - Music Composer</li>
+                                            <li><a class="text-decoration-none" href="https://www.stevensugar.art/" target="_blank">Steven Sugar</a>- Artist / Game Designer</li>
+                                            <li><a class="text-decoration-none" href="https://www.linkedin.com/in/michelleeolson/" target="_blank">Michelle Olson</a> - Game Designer</li>
+                                            <li><a class="text-decoration-none" href="https://www.linkedin.com/in/sam-celeste-80265174/" target="_blank">Sam Celeste</a> - Game Designer</li>
+                                            <li><a class="text-decoration-none" href="https://www.linkedin.com/in/blair-devereaux-41bb81148/" target="_blank">Blair Devereaux</a> - Sound Designer</li>
+                                            <li><a class="text-decoration-none" href="https://trevinomedia.com/" target="_blank">Sarah Trevino</a> - Music Composer</li>
                                         </ul>
                                     </p>
                                     <p>
@@ -337,7 +337,7 @@
                                     </p>
                                 </div>
                                 <div class="col img-box">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NC8JAmMvvS0?si=gwkNYaK_WyzbtuGF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7XTg35dQRug?si=sOrDGOEMeMT9JcBK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
