--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         
         <!-- Color Picker js -->
-        <script src="../js/colorpicker.js"></script>
+        <script src="js/colorpicker.js"></script>
     </head>
 
     <body>
