Some updates to the about page, but I should think about different copy.

--- a/about.html
+++ b/about.html
@@ -128,11 +128,11 @@
                     <div class="col-lg-8 p-3">
                         <div class="section-header">
                             <h1>Hello there!</h1>
+                            <p class="lead mt-3">I'm Katie Pustolski, a game developer living in Los Angeles, California.</p>
                         </div>
-                        <div class="pt-4 pb-3">
+                        <div class="py-3">
                             <p>
-                                My name is Katie and I'm currently a software engineer in the
-                                games industry. My personal projects tend to lean toward a cute, quirky, and at times
+                                My personal projects tend to lean toward a cute, quirky, and at times
                                 absurdly humorous style. If I can make a person smile, laugh, and learn with my
                                 projects, then I consider that a job well done.
                             </p>
@@ -141,6 +141,9 @@
                                 with a BSc in Game Design & Development. I then moved directly to Los Angeles,
                                 California (talk about a drastic change in climate) where I got a MFA in Interactive Media
                                 at the University of Southern California in 2018.
+                            </p>
+                            <p>
+                                I currently work as a software engineer at <a href="https://seconddinner.com/" target="_blank" class="text-decoration-none">Second Dinner Games</a>.
                             </p>
                         </div>
                         <div>
