Added images/protrait_sd.jpeg for the about page

--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 p-3">
-                        <img src="images/portrait_sd_round.jpeg" class="rounded img-fluid mx-auto d-block shadow" width="400" alt="...">
+                        <img src="images/portrait_sd.jpeg" class="rounded img-fluid mx-auto d-block shadow" width="400" alt="...">
                     </div>
                 </div>
             </main>
