--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <h1 class="section-header">Personal Projects</h1>
                     <p class="lead">A curated list of old student projects, game jam games, etc.</p>
                 </div>
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3 justify-content-center">
                     <div class="col">
                         <a href="projects/lindolphosboxofephemera.html">
                             <div class="card">
