Removed 'link-body-emphasis' class from name header link.
* Allows me to change the color of the text to robins egg blue.

--- a/projects/lindolphosboxofephemera.html
+++ b/projects/lindolphosboxofephemera.html
@@ -61,7 +61,7 @@
             <header class="pt-3 my-3 border-bottom container-fluid">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="fs-4 d-flex link-body-emphasis text-decoration-none mb-3 mb-md-0 me-md-auto name-title" href="../index.html">
+                        <a class="fs-4 d-flex text-decoration-none mb-3 mb-md-0 me-md-auto name-title" href="../index.html">
                             <span class="icon-link">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
                                 <use href="#game-controller"></use>
