--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <header class="pt-3 my-3 container-fluid border-bottom">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="fs-4 d-flex link-body-emphasis text-decoration-none mb-3 mb-md-0 me-md-auto name-title" href="index.html">
+                    <a class="fs-4 d-flex text-decoration-none mb-3 mb-md-0 me-md-auto name-title" href="index.html">
                         <span class="icon-link">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
                             <use href="#game-controller"></use>
                         </svg>
                         Katie Pustolski
-                    </span>
+                        </span>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
