--- a/projects/pipelinegame.html
+++ b/projects/pipelinegame.html
@@ -130,7 +130,7 @@
 
             <!-- Project Navigation -->
             <div id="project-navigation" class="container-fluid">
-                <div class="d-flex justify-content-start">
+                <div class="d-flex justify-content-between">
                     <div>
                         <a class="text-decoration-none me-md-auto" href="duos.html">
                             <span class="icon-link">
@@ -138,6 +138,16 @@
                                 <use href="#arrow-left-circle"></use>
                             </svg>
                             DuOS
+                            </span>
+                        </a>
+                    </div>
+                    <div>
+                        <a class="text-decoration-none me-md-auto" href="dragonfire.html">
+                            <span class="icon-link">
+                            Dragon Fire
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
+                                <use href="#arrow-right-circle"></use>
+                            </svg>
                             </span>
                         </a>
                     </div>
