Added copy to badger badger badger page

--- a/projects/badgerbadgerbadger.html
+++ b/projects/badgerbadgerbadger.html
@@ -155,6 +155,7 @@
                             <nav id="navbar-tableofcontents" class="flex-column align-items-stretch pe-4">
                                 <nav class="nav flex-column">
                                     <a class="nav-link" href="#overview">Badger Badger Badger</a>
+                                    <a class="nav-link" href="#about">About</a>
                                 </nav>
                             </nav>
                         </div>
@@ -170,20 +171,9 @@
                             <div class="row py-3">
                                 <div class="col-md-6">
                                     <p class="lead">
-                                        The Pipeline Game is a drag and drop memory game that was made for the
-                                        <span class="fw-bold">DreamWorks Animation Education Department</span> during my internship there back in
-                                        <span class="fw-bold">summer 2015</span>.
-                                    </p>
-                                    <p>
-                                        The goal of the project was to create a short game based off of the video <span class="fst-italic">Script to Screen: The DreamWorks
-                                        Animation Pipeline</span> by DreamWorks Education that tests DreamWorks
-                                        employee's understanding of the DreamWorks Animation SKG pipeline.
-                                        It was created with <span class="fw-bold">HTML5 canvas</span> , <span class="fw-bold">JavaScript</span> and <span class="fw-bold">CSS</span>. In addition, I used
-                                        <span class="fw-bold">Adobe Photoshop</span> to create some of the game's assets as well.
-                                    </p>
-                                    <p>
-                                        Overall, the project took about three weeks to complete. It was included as part of new employee
-                                        orientation for about a year or so after its completion.
+                                        Badger Badger Badger is a <span class="fw-bold">2D side scroller</span> where you play as Randall the Honey Badger on his quest to save his 
+                                        friend Lucky the Rabbit from Maximillian the Giraffe. 
+                                        The game was created for a game development course I took back in <span class="fw-bold">Spring 2012</span> at the Rochester Institute of Technology, and I credit it with being the first game I created with a team.
                                     </p>
                                 </div>
                                 <div class="col img-box">
@@ -193,7 +183,7 @@
                                 </div>
                             </div>
                             
-                            <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5">
+                            <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 pt-4 pb-5 border-bottom">
                                 <div class="col img-box">
                                     <a href="../images/projects/badgerbadgerbadger/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/badgerbadgerbadger/thumbnails/thumbnail_gallery_03.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_03.png"/>
@@ -213,6 +203,31 @@
                                     <a href="../images/projects/badgerbadgerbadger/gallery_06.PNG" data-toggle="lightbox" data-gallery="main-gallery">
                                         <img src="../images/projects/badgerbadgerbadger/thumbnails/thumbnail_gallery_06.png" class="img-fluid mx-auto d-block rounded" alt="thumbnail_gallery_06.png"/>
                                     </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="about" class="container my-3 py-3">
+                            <div class="row">
+                                <h2> About </h2>
+                            </div>
+                            <div class="row row-cols-1 py-3">
+                                <div class="col pe-5">
+                                    <p>
+                                        Randall would need to journey across five levels collecting Lucky's feet before reaching the final boss battle with Maximillian. 
+                                        Each level featured a different environment; desert, savannah (day), savannah (night), jungle, and caves. 
+                                        Along the way, Randall could jump over snakes and swipe at jackals all the while consuming honey, mushrooms, eggs, and fruit in order to boost his health. 
+                                        The game would end if Randall lost too much health or if he successfully rescued Lucky at the end of the game.
+                                    </p>
+                                    <p>
+                                        The inspiration for this project came from a couple of different popular viral videos involving badgers. One of them is a well known looping flash animation featuring badgers, snakes and mushrooms (<a href="https://www.youtube.com/watch?v=EIyixC9NsLI" target="_blank">YoutTube link</a>) and another is a mock nature documentary style video with a voiceover from someone named Randall (<a href="https://www.youtube.com/watch?v=4r7wHMg5Yjg&t=4s" target="_blank">YouTube link</a>). 
+                                    </p>
+                                    <p>
+                                        During the development of this project, I mainly focused on creating the art and sprite sheets for the game. Then in the summer I re-built the project from the ground up as a way to study the programming concepts I learned freshman year of college. It took some time, but doing this helped certain concepts “click”, which felt great after a school year of feeling like I was struggling in programming courses. 
+                                    </p>
+                                    <p>
+                                        The game was built using the <span class="fw-bold">C# with the Microsoft XNA framework</span> and unfortunately cannot be played any longer on most current Windows OS systems.
+                                    </p>
                                 </div>
                             </div>
                         </div>
