Added copy to dragon fire page

--- a/projects/dragonfire.html
+++ b/projects/dragonfire.html
@@ -180,20 +180,14 @@
                             <div class="row py-3">
                                 <div class="col-md-6">
                                     <p class="lead">
-                                        The Pipeline Game is a drag and drop memory game that was made for the
-                                        <span class="fw-bold">DreamWorks Animation Education Department</span> during my internship there back in
-                                        <span class="fw-bold">summer 2015</span>.
+                                        Survive as long as possible shooting fireballs at flying electric enemies and eating sheep in this 2D shooter-like game.                                   
                                     </p>
                                     <p>
-                                        The goal of the project was to create a short game based off of the video <span class="fst-italic">Script to Screen: The DreamWorks
-                                        Animation Pipeline</span> by DreamWorks Education that tests DreamWorks
-                                        employee's understanding of the DreamWorks Animation SKG pipeline.
-                                        It was created with <span class="fw-bold">HTML5 canvas</span> , <span class="fw-bold">JavaScript</span> and <span class="fw-bold">CSS</span>. In addition, I used
-                                        <span class="fw-bold">Adobe Photoshop</span> to create some of the game's assets as well.
+                                        This game was created for an Adobe Flash focused game development course at the Rochester Institute of Technology in <span class="fw-bold"> Fall 2012</span>.
+                                        Unfortunately Adobe discontinued Flash in late 2020 and this game can no longer be easily played. Below are the only screenshots I have left of it. 
                                     </p>
                                     <p>
-                                        Overall, the project took about three weeks to complete. It was included as part of new employee
-                                        orientation for about a year or so after its completion.
+                                        Completing Dragon Fire gave me the confidence to continue pursuing game development after experiencing a lot of insecurity about programming and the major I was pursuing in college (Game Design and Development).
                                     </p>
                                 </div>
                                 <div class="col img-box">
