Added barista game to index.html

--- a/index.html
+++ b/index.html
@@ -337,6 +337,13 @@
                         </a>
                     </div>
                     <div class="col">
+                        <a href="projects/baristagame.html">
+                            <div class="card">
+                                <img src="images/thumbnails/thumbnail_projects_barista_game.png" class="card-img" alt="thumbnail_projects_barista_game.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
                         <a href="projects/dragonfire.html">
                             <div class="card">
                                 <img src="images/thumbnails/thumbnail_projects_dragon_fire.png" class="card-img" alt="thumbnail_projects_dragon_fire.png">
