Updated dragon fire copy and sub-nav

--- a/projects/dragonfire.html
+++ b/projects/dragonfire.html
@@ -132,12 +132,12 @@
             <div id="project-navigation" class="container-fluid">
                 <div class="d-flex justify-content-between">
                     <div>
-                        <a class="text-decoration-none me-md-auto" href="pipelinegame.html">
+                        <a class="text-decoration-none me-md-auto" href="baristagame.html">
                             <span class="icon-link">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
                                 <use href="#arrow-left-circle"></use>
                             </svg>
-                            The Pipeline Game
+                            So You Want To Be A Barista?
                             </span>
                         </a>
                     </div>
@@ -180,14 +180,13 @@
                             <div class="row py-3">
                                 <div class="col-md-6">
                                     <p class="lead">
-                                        Survive as long as possible shooting fireballs at flying electric enemies and eating sheep in this 2D shooter-like game.                                   
+                                        Dragon Fire is a <span class="fw-bold">2D shooter-like Adobe Flash game</span> created for a game development course at the Rochester Institute of Technology in <span class="fw-bold">Fall 2012</span>.
                                     </p>
                                     <p>
-                                        This game was created for an Adobe Flash focused game development course at the Rochester Institute of Technology in <span class="fw-bold"> Fall 2012</span>.
-                                        Unfortunately Adobe discontinued Flash in late 2020 and this game can no longer be easily played. Below are the only screenshots I have left of it. 
+                                        Using a mouse and keyboard, the player controls a dragon and survives as long as they can while shooting fireballs at enemies that move from left to right on screen. The longer the game goes on, the more enemies appear on the screen, making the game more difficult to survive. The player can heal their dragon by eating sheep that appear randomly throughout the game. However, the game will end if they run out of health.
                                     </p>
                                     <p>
-                                        Completing Dragon Fire gave me the confidence to continue pursuing game development after experiencing a lot of insecurity about programming and the major I was pursuing in college (Game Design and Development).
+                                        Unfortunately Adobe discontinued Flash support in late 2020 and this game can no longer be easily played. Below are the only screenshots I have left of it.
                                     </p>
                                 </div>
                                 <div class="col img-box">
