Updated copy in duos page

--- a/projects/duos.html
+++ b/projects/duos.html
@@ -232,12 +232,12 @@
                             <div class="row row-cols-1 row-cols-lg-2 py-3">
                                 <div class="col pe-5">
                                     <p>
-                                        DuOS was developed in the Unity game engine and is targeted toward players who
+                                        DuOS was developed with <span class="fw-bold">C#</span> in the <span class="fw-bold">Unity Game Engine</span> and is targeted toward players who
                                         have prior experience with puzzle games.
                                     </p>
                                     <p>
                                         It was Thomas Lu (Lead Designer & Engineer) and Greg Chen's (Art Director) joint
-                                        thesis project and was developed from fall 2016 through spring 2017. 
+                                        thesis project. I contributed to the project first as a producer and then as a puzzle designer between <span class="fw-bold">Fall 2016 through Spring 2017<span>. 
                                     </p>
                                 </div>
                                 <div class="col">
